--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <link rel="icon" type="image/png" sizes="16x16" href="..\..\favikons\FFavikon.png">
    <title>Manga entertainment</title>
-   <link rel="stylesheet" href="/Manga entertainment/Сторінки/Основна сторінка/stule.css">
+   <link rel="stylesheet" href="/Сторінки/Основна сторінка/stule.css">
 </head>
 
 <body>
@@ -57,11 +57,11 @@
                   <div class="manga">
                      <div class="manga_row">
 
-                        <a class="manga_conteiner" href="/Manga entertainment/Сторінки/Проклята дівчина/index.html">
+                        <a class="manga_conteiner" href="/Сторінки/Проклята дівчина/index.html">
                            <div class="manga_image">
                               <div class="manga_image_row">
                                  <img
-                                    src="/Manga entertainment/images/Manga/Проклята дівчина глава 1/Тайтл/S9B0KLfbPQ_250x350.jpg"
+                                    src="/images/Manga/Проклята дівчина глава 1/Тайтл/S9B0KLfbPQ_250x350.jpg"
                                     alt="">
                               </div>
                            </div>
@@ -75,7 +75,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/Manga/Асура/Тайтл/RejqbSlBNp9v_250x350.jpg"
+                                 <img src="/images/Manga/Асура/Тайтл/RejqbSlBNp9v_250x350.jpg"
                                     alt="">
                               </div>
                            </div>
@@ -91,7 +91,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/Manga/Боксер/Тайтл/8IRVXlW7yHKe_250x350.jpg"
+                                 <img src="/images/Manga/Боксер/Тайтл/8IRVXlW7yHKe_250x350.jpg"
                                     alt="">
                               </div>
                            </div>
@@ -107,7 +107,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -122,7 +122,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -137,7 +137,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -152,7 +152,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -167,7 +167,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -182,7 +182,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -197,7 +197,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -212,7 +212,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -227,7 +227,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -242,7 +242,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -257,7 +257,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -272,7 +272,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/Manga entertainment/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
