--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
    <meta charset="utf-8">
-   <link rel="icon" type="image/png" sizes="16x16" href="..\..\favikons\FFavikon.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="favikons\FFavikon.png">
    <title>Manga entertainment</title>
-   <link rel="stylesheet" href="/Сторінки/Основна сторінка/stule.css">
+   <link rel="stylesheet" href="Сторінки/Основна сторінка/stule.css">
 </head>
 
 <body>
@@ -57,12 +57,10 @@
                   <div class="manga">
                      <div class="manga_row">
 
-                        <a class="manga_conteiner" href="/Сторінки/Проклята дівчина/index.html">
+                        <a class="manga_conteiner" href="Сторінки/Проклята дівчина/index.html">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img
-                                    src="/images/Manga/Проклята дівчина глава 1/Тайтл/S9B0KLfbPQ_250x350.jpg"
-                                    alt="">
+                                 <img src="images/Manga/Проклята дівчина глава 1/Тайтл/S9B0KLfbPQ_250x350.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -75,8 +73,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/Manga/Асура/Тайтл/RejqbSlBNp9v_250x350.jpg"
-                                    alt="">
+                                 <img src="images/Manga/Асура/Тайтл/RejqbSlBNp9v_250x350.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -91,8 +88,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/Manga/Боксер/Тайтл/8IRVXlW7yHKe_250x350.jpg"
-                                    alt="">
+                                 <img src="images/Manga/Боксер/Тайтл/8IRVXlW7yHKe_250x350.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -107,7 +103,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -122,7 +118,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -137,7 +133,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -152,7 +148,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -167,7 +163,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -182,7 +178,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -197,7 +193,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -212,7 +208,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -227,7 +223,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -242,7 +238,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -257,7 +253,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
@@ -272,7 +268,7 @@
                         <div class="manga_conteiner">
                            <div class="manga_image">
                               <div class="manga_image_row">
-                                 <img src="/images/1640825120_01_23cf19.jpg" alt="">
+                                 <img src="images/1640825120_01_23cf19.jpg" alt="">
                               </div>
                            </div>
                            <div class="manga_info">
