--- a/Сторінки/Проклята дівчина/index.html
+++ b/Сторінки/Проклята дівчина/index.html
@@ -15,7 +15,7 @@
          <div class="container">
             <div class="header_row">
                <div class="header_logo">
-                  <a href="..\Основна сторінка\index.html">MangaEntertainment</a>
+                  <a href="..\..\index.html">MangaEntertainment</a>
                </div>
                <div class="manga_button">
                   <div class="manga_button_row">
