--- a/Сторінки/Проклята дівчина/index.html
+++ b/Сторінки/Проклята дівчина/index.html
@@ -150,7 +150,7 @@
                      </div>
                      <div class="komentari_user_text">
                         <p>
-                           Маркело їбать ти де це блядь відкопав? Що з розширенням, ти по дарксоулсу зіскучився?
+                           Що з розширенням
                         </p>
                      </div>
                   </div>
